[gd_scene load_steps=21 format=2]

[ext_resource path="res://ui/Tab.gd" type="Script" id=1]
[ext_resource path="res://ui/ActionPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/font/Montserrat-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Screenshot 2021-07-01 231510.png" type="Texture" id=4]
[ext_resource path="res://assets/Font.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/themes/grabber.tres" type="StyleBox" id=6]
[ext_resource path="res://assets/themes/grabber_hl.tres" type="StyleBox" id=7]
[ext_resource path="res://assets/themes/grabber_pressed.tres" type="StyleBox" id=8]
[ext_resource path="res://ui/TextEditor.gd" type="Script" id=9]
[ext_resource path="res://Screenshot 2021-06-28 174739.png" type="Texture" id=10]
[ext_resource path="res://Screenshot 2021-07-01 235851.png" type="Texture" id=11]

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 8.0
content_margin_right = 6.0
bg_color = Color( 0.172549, 0.192157, 0.227451, 1 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 8.0
content_margin_right = 6.0
bg_color = Color( 0.207843, 0.231373, 0.270588, 1 )

[sub_resource type="StyleBoxLine" id=4]
color = Color( 0.34902, 0.364706, 0.392157, 1 )

[sub_resource type="Theme" id=5]
HScrollBar/icons/decrement = null
HScrollBar/icons/decrement_highlight = null
HScrollBar/icons/increment = null
HScrollBar/icons/increment_highlight = null
HScrollBar/styles/grabber = ExtResource( 6 )
HScrollBar/styles/grabber_highlight = ExtResource( 7 )
HScrollBar/styles/grabber_pressed = ExtResource( 8 )
HScrollBar/styles/scroll = null
HScrollBar/styles/scroll_focus = null
PopupMenu/colors/font_color = Color( 0.819608, 0.823529, 0.831373, 1 )
PopupMenu/colors/font_color_accel = Color( 0.7, 0.7, 0.7, 0.8 )
PopupMenu/colors/font_color_disabled = Color( 0.4, 0.4, 0.4, 0.8 )
PopupMenu/colors/font_color_hover = Color( 0.88, 0.88, 0.88, 1 )
PopupMenu/constants/hseparation = 3
PopupMenu/constants/vseparation = 3
PopupMenu/fonts/font = null
PopupMenu/icons/checked = null
PopupMenu/icons/radio_checked = null
PopupMenu/icons/radio_unchecked = null
PopupMenu/icons/submenu = null
PopupMenu/icons/unchecked = null
PopupMenu/styles/hover = SubResource( 2 )
PopupMenu/styles/labeled_separator_left = null
PopupMenu/styles/labeled_separator_right = null
PopupMenu/styles/panel = SubResource( 3 )
PopupMenu/styles/panel_disabled = null
PopupMenu/styles/separator = SubResource( 4 )
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = ExtResource( 6 )
VScrollBar/styles/grabber_highlight = ExtResource( 7 )
VScrollBar/styles/grabber_pressed = ExtResource( 8 )
VScrollBar/styles/scroll = null
VScrollBar/styles/scroll_focus = null

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 10.0
bg_color = Color( 0.156863, 0.172549, 0.203922, 1 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 45.0
bg_color = Color( 0.2, 0.219608, 0.258824, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_color = Color( 0.156863, 0.172549, 0.203922, 1 )

[sub_resource type="Theme" id=9]
default_font = ExtResource( 5 )
HScrollBar/icons/decrement = null
HScrollBar/icons/decrement_highlight = null
HScrollBar/icons/increment = null
HScrollBar/icons/increment_highlight = null
HScrollBar/styles/grabber = ExtResource( 6 )
HScrollBar/styles/grabber_highlight = ExtResource( 7 )
HScrollBar/styles/grabber_pressed = ExtResource( 8 )
HScrollBar/styles/scroll = null
HScrollBar/styles/scroll_focus = null
VScrollBar/icons/decrement = null
VScrollBar/icons/decrement_highlight = null
VScrollBar/icons/increment = null
VScrollBar/icons/increment_highlight = null
VScrollBar/styles/grabber = ExtResource( 6 )
VScrollBar/styles/grabber_highlight = ExtResource( 7 )
VScrollBar/styles/grabber_pressed = ExtResource( 8 )
VScrollBar/styles/scroll = null
VScrollBar/styles/scroll_focus = null

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.156863, 0.172549, 0.203922, 1 )
border_color = Color( 0.737255, 0.752941, 0.776471, 1 )

[node name="HSplitContainer" type="HSplitContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/autohide = 0
split_offset = 500
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="."]
margin_right = 510.0
margin_bottom = 900.0
split_offset = 500

[node name="TextEditor" type="TextEdit" parent="VSplitContainer"]
margin_right = 510.0
margin_bottom = 750.0
rect_min_size = Vector2( 0, 250 )
theme = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
custom_colors/member_variable_color = Color( 0.858824, 0.74902, 0.470588, 1 )
custom_colors/code_folding_color = Color( 0.901961, 0.784314, 0.560784, 1 )
custom_colors/function_color = Color( 0.34902, 0.588235, 0.784314, 1 )
custom_colors/symbol_color = Color( 0.545098, 0.670588, 0.67451, 1 )
custom_colors/selection_color = Color( 0.243137, 0.266667, 0.317647, 1 )
custom_colors/line_number_color = Color( 0.380392, 0.427451, 0.513726, 1 )
custom_colors/number_color = Color( 0.819608, 0.596078, 0.333333, 1 )
custom_colors/current_line_color = Color( 0.172549, 0.192157, 0.235294, 1 )
custom_colors/word_highlighted_color = Color( 0.192157, 0.211765, 0.25098, 1 )
text = "import \"basiclib\";

header={
	tag: \"4x1MUX\",
	type: prefab,
	input: 6,
	output:1,
}

new and1= and(40,100);
new and2= and(40,120);
new and3= and(40,140);
new and4= and(40,160);
new not1 = not(20,100);
new not2 = not(20,160);
new or1 = or(60,120)

or1 : 4
header[0] => not1;
header[1] => not2;

header[0] => and1;
header[1] => and1;
header[3] => and1;

header[0] => and2;
not2 => and2;
header[4] => and2;

header[1] => and3;
not1 =>and3;
header[5] =>and3

[ not1, not2, header[6] ] => and4;
[and1,and2,and3,and4] =>or1;
or1=>header;




"
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
draw_spaces = true
highlight_all_occurrences = true
smooth_scrolling = true
wrap_enabled = true
minimap_draw = true
caret_blink = true
script = ExtResource( 9 )

[node name="CompileTimer" type="Timer" parent="VSplitContainer/TextEditor"]
wait_time = 2.0

[node name="RichTextLabel" type="RichTextLabel" parent="VSplitContainer"]
margin_top = 762.0
margin_right = 510.0
margin_bottom = 900.0
focus_mode = 2
custom_styles/normal = SubResource( 8 )
text = ">"
fit_content_height = true
scroll_following = true
selection_enabled = true

[node name="Tab" type="GraphEdit" parent="."]
margin_left = 522.0
margin_right = 1536.0
margin_bottom = 900.0
theme = SubResource( 9 )
custom_styles/bg = SubResource( 10 )
right_disconnects = true
scroll_offset = Vector2( -522, -40 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionList" type="VBoxContainer" parent="Tab"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -347.0
margin_top = -53.0
margin_right = -13.0
margin_bottom = -23.0
grow_horizontal = 0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Action" parent="Tab/ActionList" instance=ExtResource( 2 )]
margin_right = 334.0
margin_bottom = 30.0

[node name="Screenshot 2021-07-01 231510" type="Sprite" parent="."]
visible = false
position = Vector2( 878.519, 362.422 )
texture = ExtResource( 4 )

[node name="Screenshot 2021-07-01 235851" type="Sprite" parent="."]
visible = false
position = Vector2( 933.034, 530.861 )
texture = ExtResource( 11 )

[node name="Screenshot 2021-06-28 174739" type="Sprite" parent="."]
visible = false
position = Vector2( 1586.31, 100.656 )
texture = ExtResource( 10 )
[connection signal="timeout" from="VSplitContainer/TextEditor/CompileTimer" to="VSplitContainer/TextEditor" method="_on_text_read"]
[connection signal="connection_request" from="Tab" to="Tab" method="_on_Tab_connection_request"]
[connection signal="copy_nodes_request" from="Tab" to="Tab" method="_on_Tab_copy_nodes_request"]
[connection signal="disconnection_request" from="Tab" to="Tab" method="_on_Tab_disconnection_request"]
[connection signal="node_selected" from="Tab" to="Tab" method="_on_Tab_node_selected"]
[connection signal="node_unselected" from="Tab" to="Tab" method="_on_Tab_node_unselected"]
[connection signal="paste_nodes_request" from="Tab" to="Tab" method="_on_Tab_paste_nodes_request"]
